--- a/08_start_environment/the_environment.ipynb
+++ b/08_start_environment/the_environment.ipynb
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.04768551,  0.00351552,  0.03896292,  0.04701946])"
+       "array([ 0.04492043, -0.01259805, -0.02945733,  0.02521956], dtype=float32)"
       ]
      },
      "execution_count": 3,
@@ -192,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 ('rl_course')",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +206,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d77c9cd89f606c886a62b89f76307361f1ead05ae5d4c123d23e867df45a5489"
+   }
   }
  },
  "nbformat": 4,
